# galileo

./: CMakeLists.txt  README.md  package.xml
automatic_painting/: CMakeLists.txt  README.md  default.rviz  doxyconf  galileo.rviz  package.xml  read_bagfile.py
automatic_painting/launch/: demo.launch  rviz_visualization.launch  start.launch  testing.launch  training.launch
automatic_painting/msg/: Features.msg  Pose.msg  Skeleton.msg  SkeletonJoint.msg  Skeletons.msg
automatic_painting/src/: Classifier.h  classifier_features_node.cpp  extract_features_node.cpp  point_cloud_node.cpp  point_cloud_node2.cpp  train_data_node.cpp
launch/: camera.launch  galileo.launch
msg/: Features.msg  Skeleton.msg  SkeletonJoint.msg  Skeletons.msg
src/: capture_image.cpp~  capture_image_node.cpp  capture_image_node2.cpp  extract_features_node.cpp  listener_transform.cpp  point_cloud_node.cpp  read_bagfile.py  skeleton_angles.cpp
surfaces/: CMakeLists.txt  generate_points.cpp  proccess_surface.cpp
